--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
     <div class="loading-spinner" id="loading-spinner" hidden>
       <img src="loading-spinner.svg" alt="Loading" />
     </div>
+    <div class="arrow-container">
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
+    </div>
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
+        alt=""
+      />
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
