--- a/index.html
+++ b/index.html
@@ -21,24 +21,7 @@
         <path class="a3" d="M0 40 L30 72 L60 40"></path>
       </svg>
     </div>
-    <div class="image-container" id="image-container">
-      <img
-        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1554046862-054dbd07c8c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=670&q=80"
-        alt=""
-      />
-    </div>
+    <div class="image-container" id="image-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
